Refactor HTML structure and add global styles for header and navigation

--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-<h1>Website</h1>
+<!DOCTYPE html>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Snazzy Paws Dog Grooming</title>
+    <link rel="stylesheet" href="css/styles.css"> 
+</head>
+
+<html lang="en">
+    <body class="background-theme">
+        <header> 
+            <nav class="accent-theme">
+                <ul class="header-text">
+                    <li class="main-header">Snazzy Paws Grooming</li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="contact.html">Contact us</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="booking.html">Book now!</a></li>
+                    
+                </ul>
+            </nav>
+        </header>
+        
+        <footer>test</footer>
+    </body>
+
+</html>
