Add services page and template for Snazzy Paws Dog Grooming
- Created services.html with detailed service offerings and pricing.
- Added an overview section highlighting the grooming team's experience and care.
- Included a table listing various grooming services and their respective prices.
- Introduced a template.html file for future pages.

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
         <header> 
             <nav class="accent-theme">
                 <ul class="nav-text">
-                    <li><a class="main-header" href=index.html>Snazzy Paws Grooming</a></li>
+                    <li><a class="sp-nav-header" href=index.html>Snazzy Paws Grooming</a></li>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="contact.html">Contact us</a></li>
                     <li><a href="services.html">Services</a></li>
@@ -53,21 +53,21 @@
                 
             </div>
 
-        <footer class="accent-theme footer-main">
-            <div class="footer-subsection">
-                <h1 class="header-small">Our Hours</h1> 
-                <p class="text-small">
-                    Monday - Saturday <br>
-                    9AM - 5PM
-                </p>
-            </div>
+            <footer class="accent-theme footer-main">
+                <div class="footer-subsection">
+                    <h1 class="header-small">Our Hours</h1> 
+                    <p class="text-small">
+                        Monday - Saturday <br>
+                        9AM - 5PM
+                    </p>
+                </div>
 
-            <div class="footer-subsection">
-                <h1 class="header-small">Visit us</h1>
-                <p class="text-small">
-                    57 Sunshine Avenue <br>
-                    Te Rapa, Hamilton 3200</p>
-            </div>
-        </footer>
+                <div class="footer-subsection">
+                    <h1 class="header-small">Visit us</h1>
+                    <p class="text-small">
+                        57 Sunshine Avenue <br>
+                        Te Rapa, Hamilton 3200</p>
+                </div>
+            </footer>
 
         </main>
