--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header> 
             <nav class="accent-theme">
                 <ul>
-                    <li><a class="main-header" href=index.html>Snazzy Paws Grooming</a></li>
+                    <li><a class="sp-nav-header" href=index.html>Snazzy Paws Grooming</a></li>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="contact.html">Contact us</a></li>
                     <li><a href="services.html">Services</a></li>
