Refactor HTML structure and add viewport meta tag for responsive design; update email links for better accessibility

--- a/booking.html
+++ b/booking.html
@@ -24,6 +24,12 @@
         </header>
         
         <main>
+            
+            <div>
+                <h1 class="page-header">Booking</h1>
+            </div>
+
+            <div></div>
 
             <footer class="accent-theme footer-main">
                 <div class="footer-subsection">
