--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 
 <head>
-    <meta charset="UTF-8">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Snazzy Paws Dog Grooming</title>
     <link rel="stylesheet" href="css/styles.css"> 
 </head>
@@ -29,7 +31,7 @@
                     
                     <p>
                         Phone: 022-654-1253 <br>
-                        Email: snazzypawsdoggrooming@gmail.com <br>
+                        Email: <a href="mailto:snazzypawsdoggrooming@gmail.com">snazzypawsdoggrooming@gmail.com</a> <br>
                         We are located at 57 Sunshine Avenue, Te Rapa, Hamilton 3200 <br>
                         View the map below to find us!
                     </p>
