--- a/services.html
+++ b/services.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 
 <head>
-    <meta charset="UTF-8">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Snazzy Paws Dog Grooming</title>
     <link rel="stylesheet" href="css/styles.css"> 
 </head>
@@ -25,7 +27,7 @@
             <h1 class="page-header">Services</h1>
 
             <div class="services-overview-section">
-                <div class="services-text-subsection">
+                <div class="text-section">
                     <h2>Overview</h2>
                     <p>Our friendly team brings years of experience and genuine care to every appointment. 
                         We're dedicated to keeping your pets healthy and well-groomed, with a strong focus on hygiene and gentle handling.
@@ -36,11 +38,10 @@
                         we're committed to creating a positive experience that leaves every pet looking and feeling their best.</p>
                 </div>
 
-                <div class="services-media-subsection">
+                <div class="media-section">
                     <img src="./images/dog_grooming.png" 
                         alt="A photograph of a woman brushing a happy golden retriever"
-                        height="500"
-                        width="850">
+                        height="500">
                 </div>
             </div>
 
