--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,9 @@
     and the image opening/closing functionality has changed due to the limitations of only using HTML. -->
 
 <head>
-    <meta charset="UTF-8">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Snazzy Paws Dog Grooming</title>
     <link rel="stylesheet" href="css/styles.css"> 
 </head>
