--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
     <title>Snazzy Paws Dog Grooming</title>
     <link rel="stylesheet" href="css/styles.css"> 
 </head>
@@ -38,10 +38,9 @@
                 <div class="text-section">
                     <h1>About us</h1>
                     <p>
-                Snazzy Paws has been proudly serving Hamilton since 2015. We're a local dog <br> 
-                grooming business dedicated to giving every pup the highest level of care! Our <br>
-                goal is to make sure every dog looks great, feels great, and enjoys their grooming experience.
-
+                    Snazzy Paws has been proudly serving Hamilton since 2015. We're a local dog
+                    grooming business dedicated to giving every pup the highest level of care! Our
+                    goal is to make sure every dog looks great, feels great, and enjoys their grooming experience.
                     </p>
                 </div>
 
@@ -50,7 +49,7 @@
                     <p>
                         We're here to help! Feel free to call or leave us an email. <br>
                         Phone: 022-654-1253 <br>
-                        Email: snazzypawsdoggrooming@gmail.com <br>
+                        Email: <a href="mailto:snazzypawsdoggrooming@gmail.com">snazzypawsdoggrooming@gmail.com</a> <br>
                     </p>
                 </div>
                 
