Enhance navigation and footer consistency across multiple pages

--- a/booking.html
+++ b/booking.html
@@ -12,8 +12,12 @@
     <body class="background-theme">
         <header> 
             <nav class="accent-theme">
+
+                <div class="sp-nav-header">
+                    <a href=index.html>Snazzy Paws Grooming</a>
+                </div>
+
                 <ul class="nav-text">
-                    <li><a class="sp-nav-header" href=index.html>Snazzy Paws Grooming</a></li>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="contact.html">Contact us</a></li>
                     <li><a href="services.html">Services</a></li>
@@ -31,7 +35,7 @@
 
             <div></div>
 
-            <footer class="accent-theme footer-main">
+            <footer class="accent-theme footer-main footer-theme">
                 <div class="footer-subsection">
                     <h1 class="header-small">Our Hours</h1> 
                     <p class="text-small">
