--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
     <body class="background-theme">
         <header> 
             <nav class="accent-theme">
-                <ul>
-                    <li><a class="sp-nav-header" href=index.html>Snazzy Paws Grooming</a></li>
+
+                <div class="sp-nav-header">
+                    <a href=index.html>Snazzy Paws Grooming</a>
+                </div>
+
+                <ul class="nav-text">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="contact.html">Contact us</a></li>
                     <li><a href="services.html">Services</a></li>
@@ -56,7 +60,7 @@
             </div>
         </main>
         
-        <footer class="accent-theme footer-main">
+        <footer class="accent-theme footer-main footer-theme">
             <div class="footer-subsection">
                 <h1 class="header-small">Our Hours</h1> 
                 <p class="text-small">
@@ -72,6 +76,7 @@
                     Te Rapa, Hamilton 3200</p>
             </div>
         </footer>
+        
     </body>
 
 </html>
