Enhance booking functionality with a new booking form page; update navigation and styles for consistency across all pages

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
                 </div>
 
                 <ul class="nav-text">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="contact.html">Contact us</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="booking.html">Book now!</a></li>
+                    <li class="btn button-container accent-theme"><a href="index.html">Home</a></li>
+                    <li class="btn button-container accent-theme"><a href="contact.html">Contact us</a></li>
+                    <li class="btn button-container accent-theme"><a href="services.html">Services</a></li>
+                    <li class="btn button-container accent-theme"><a href="gallery.html">Gallery</a></li>
+                    <li class="btn button-container accent-theme"><a href="booking.html">Book now!</a></li>
                 </ul>
             </nav>
         </header>
