--- a/contact.html
+++ b/contact.html
@@ -18,11 +18,11 @@
                 </div>
 
                 <ul class="nav-text">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="contact.html">Contact us</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="booking.html">Book now!</a></li>
+                    <li class="btn button-container accent-theme"><a href="index.html">Home</a></li>
+                    <li class="btn button-container accent-theme"><a href="contact.html">Contact us</a></li>
+                    <li class="btn button-container accent-theme"><a href="services.html">Services</a></li>
+                    <li class="btn button-container accent-theme"><a href="gallery.html">Gallery</a></li>
+                    <li class="btn button-container accent-theme"><a href="booking.html">Book now!</a></li>
                 </ul>
             </nav>
         </header>
@@ -30,7 +30,7 @@
         <main>
 
             <div class="contact-page">
-                <div class="text-section">
+                <div class="text-section contact-details">
                     <h1>Contact Details</h1>
                     
                     <p>
