--- a/services.html
+++ b/services.html
@@ -18,11 +18,11 @@
                 </div>
 
                 <ul class="nav-text">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="contact.html">Contact us</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="booking.html">Book now!</a></li>
+                    <li class="btn button-container accent-theme"><a href="index.html">Home</a></li>
+                    <li class="btn button-container accent-theme"><a href="contact.html">Contact us</a></li>
+                    <li class="btn button-container accent-theme"><a href="services.html">Services</a></li>
+                    <li class="btn button-container accent-theme"><a href="gallery.html">Gallery</a></li>
+                    <li class="btn button-container accent-theme"><a href="booking.html">Book now!</a></li>
                 </ul>
             </nav>
         </header>
@@ -77,7 +77,6 @@
                         <tr><td>Puppy package: introductory grooming services tailored for puppies</td><td>$30-$60</td></tr>
                         <tr><td>Senior dog package: grooming services tailored for older dogs, often with special handling and care</td><td>$40-$80</td></tr>
                         <tr><td>Full grooming package: comprehensive grooming service, including bath, haircut, teeth brushing, nail trim and ear cleaning</td><td>$60-$120</td></tr>
-
                     </tbody>
                 </table>
             </div>
