Finished main pages. Enhance accessibility and structure across multiple pages; add new request received page and improve navigation

--- a/request-received.html
+++ b/request-received.html
@@ -1,3 +1,8 @@
+<!-- 
+    Severin Romaine - 5117711 
+    BIT607 - Assessment 2 
+-->
+
 <!DOCTYPE html>
 
 <head>
@@ -11,7 +16,7 @@
 <html lang="en">
     <body class="background-theme">
         <header> 
-            <nav class="accent-theme">
+            <nav class="accent-theme" role="navigation" aria-label="Navigation menu">
 
                 <div class="sp-nav-header">
                     <a href=index.html>Snazzy Paws Grooming</a>
@@ -28,8 +33,19 @@
         </header>
         
         <main>
+            <h1 class="page-header">
+                Your appointment request has been received!
+            </h1>
 
-            <footer class="accent-theme footer-main footer-theme">
+            <div class="booking-received">
+                <p>
+                    Thank you for booking an appointment with us. We will reach out to you via email to confirm the appointment. We look forward to seeing you!
+                </p>
+            </div>
+            <div class="button-container">
+                <a href="index.html" class="btn">Return to Home</a>
+            </div>
+            <footer class="accent-theme footer-main footer-theme" role="contentinfo" aria-label="Hours and location">
                 <div class="footer-subsection">
                     <h1 class="header-small">Our Hours</h1> 
                     <p class="text-small">
