--- a/template.html
+++ b/template.html
@@ -1,3 +1,10 @@
+<!-- 
+    Severin Romaine - 5117711 
+    BIT607 - Assessment 2
+    Note:
+        Template used on all pages. 
+-->
+
 <!DOCTYPE html>
 
 <head>
@@ -11,7 +18,7 @@
 <html lang="en">
     <body class="background-theme">
         <header> 
-            <nav class="accent-theme">
+            <nav class="accent-theme" role="navigation" aria-label="Navigation menu">
 
                 <div class="sp-nav-header">
                     <a href=index.html>Snazzy Paws Grooming</a>
@@ -29,7 +36,7 @@
         
         <main>
 
-            <footer class="accent-theme footer-main footer-theme">
+            <footer class="accent-theme footer-main footer-theme" role="contentinfo" aria-label="Hours and location">
                 <div class="footer-subsection">
                     <h1 class="header-small">Our Hours</h1> 
                     <p class="text-small">
