--- a/gallery.html
+++ b/gallery.html
@@ -1,8 +1,15 @@
+<!-- 
+    Severin Romaine - 5117711 
+    BIT607 - Assessment 2 
+
+    Note:
+        I have diverged slightly from the original wireframe to better meet the assessment criteria;
+        The gallery grid is 4x4, the images are one consistent size (850x925px),
+        and the image opening/closing functionality is slightly different because of the limitations of only using HTML.
+-->
+
 <!DOCTYPE html>
 
-<!-- I have diverged slightly from the original wireframe to better meet the assessment criteria;
-    The gallery grid is 4x4, the images are one consistent size (850x925px),
-    and the image opening/closing functionality has changed due to the limitations of only using HTML. -->
 
 <head>
 <meta charset="UTF-8">
@@ -15,7 +22,7 @@
 <html lang="en">
     <body class="background-theme">
         <header> 
-            <nav class="accent-theme">
+            <nav class="accent-theme" role="navigation" aria-label="Navigation menu">
 
                 <div class="sp-nav-header">
                     <a href=index.html>Snazzy Paws Grooming</a>
@@ -34,8 +41,8 @@
         <main>
             <h1 class="page-header"> Gallery </h1>
             
-            <div class="gallery-section">
-                <a href="#dog-img-1"> <!-- Open 'dog-img-1' popup-->
+                <div class="gallery-section" role="region" aria-labelledby="gallery-heading">
+                <a href="#dog-img-1"> 
                     <img src="images/dog_gallery_1_thumb.png" class="gallery-thumbnail" alt="A smiling golden retriever looking at the camera">
                 </a>
 
@@ -78,7 +85,7 @@
 
             </div>
 
-            <footer class="accent-theme footer-main footer-theme">
+            <footer class="accent-theme footer-main footer-theme" role="contentinfo" aria-label="Hours and location">
                 <div class="footer-subsection">
                     <h1 class="header-small">Our Hours</h1> 
                     <p class="text-small">
