--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!-- 
+    Severin Romaine - 5117711 
+    BIT607 - Assessment 2 
+-->
+
 <!DOCTYPE html>
 
 <head>
@@ -9,7 +14,7 @@
 <html lang="en">
     <body class="background-theme">
         <header> 
-            <nav class="accent-theme">
+            <nav class="accent-theme" role="navigation" aria-label="Navigation menu">
 
                 <div class="sp-nav-header">
                     <a href=index.html>Snazzy Paws Grooming</a>
@@ -26,6 +31,11 @@
         </header>
     
         <main>
+
+            <div>
+                <h1 class="page-header">Welcome to the Snazzy Paws Dog Grooming Salon!</h1>
+            </div>
+
             <div class="media-section">
                 <img src="./images/happy_dog_1.png" 
                     alt="A photo of a dog lying on the ground with their tongue out"
@@ -40,7 +50,7 @@
             <div class="index-info-section">
 
                 <div class="text-section">
-                    <h1>About us</h1>
+                    <h2>About us</h2>
                     <p>
                     Snazzy Paws has been proudly serving Hamilton since 2015. We're a local dog
                     grooming business dedicated to giving every pup the highest level of care! Our
@@ -49,7 +59,7 @@
                 </div>
 
                 <div class="text-section">
-                    <h1>Contact</h1>
+                    <h2>Contact</h2>
                     <p>
                         We're here to help! Feel free to call or leave us an email. <br>
                         Phone: 022-654-1253 <br>
@@ -60,7 +70,7 @@
             </div>
         </main>
         
-        <footer class="accent-theme footer-main footer-theme">
+        <footer class="accent-theme footer-main footer-theme" role="contentinfo" aria-label="Hours and location">
             <div class="footer-subsection">
                 <h1 class="header-small">Our Hours</h1> 
                 <p class="text-small">
