Add new dog images and update HTML for accessibility and structure
- Added new dog images: dog_gallery_14, dog_gallery_15, dog_gallery_16, dog_gallery_5, dog_gallery_6, dog_gallery_7, dog_gallery_8, and dog_gallery_9, along with their thumbnail versions.
- Updated index.html, request-received.html, services.html, and template.html to improve accessibility by adding aria-labels to the main website header links.
- Changed header tags from <h1> to <h2> for "Our Hours" and "Visit us" sections in the footer for better semantic structure.

--- a/booking-services.html
+++ b/booking-services.html
@@ -22,7 +22,7 @@
             <nav class="accent-theme" role="navigation" aria-label="Navigation menu">
 
                 <div class="sp-nav-header">
-                    <a href=index.html>Snazzy Paws Grooming</a>
+                    <a aria-label="Main website header" href=index.html>Snazzy Paws Grooming</a>
                 </div>
 
                 <ul class="nav-text">
@@ -36,8 +36,8 @@
         </header>
         
         <main>
-                <h1 id="services-heading" class="page-header">Services</h1>
-                <div class="services-table" role="region" aria-labelledby="services-heading">
+                <h1 id="booking-selection-heading" class="page-header">Services</h1>
+                <div class="services-table" role="region" aria-labelledby="booking-selection-heading">
                 <table>
                     <thead>
                         <tr>
@@ -114,7 +114,7 @@
                 
         <footer class="accent-theme footer-main footer-theme" role="contentinfo" aria-label="Hours and location">
             <div class="footer-subsection">
-                <h1 class="header-small">Our Hours</h1> 
+                <h2 class="header-small">Our Hours</h2> 
                 <p class="text-small">
                     Monday - Saturday <br>
                     9AM - 5PM
@@ -122,7 +122,8 @@
             </div>
 
             <div class="footer-subsection">
-                <h1 class="header-small">Visit us</h1>
+                    <h2 class="header-small">Visit us</h2>
+
                 <p class="text-small">
                     57 Sunshine Avenue <br>
                     Te Rapa, Hamilton 3200</p>
