--- a/request-received.html
+++ b/request-received.html
@@ -19,7 +19,7 @@
             <nav class="accent-theme" role="navigation" aria-label="Navigation menu">
 
                 <div class="sp-nav-header">
-                    <a href=index.html>Snazzy Paws Grooming</a>
+                    <a aria-label="Main website header" href=index.html>Snazzy Paws Grooming</a>
                 </div>
 
                 <ul class="nav-text">
@@ -45,9 +45,10 @@
             <div class="button-container">
                 <a href="index.html" class="btn">Return to Home</a>
             </div>
+            
             <footer class="accent-theme footer-main footer-theme" role="contentinfo" aria-label="Hours and location">
                 <div class="footer-subsection">
-                    <h1 class="header-small">Our Hours</h1> 
+                    <h2 class="header-small">Our Hours</h2> 
                     <p class="text-small">
                         Monday - Saturday <br>
                         9AM - 5PM
@@ -55,7 +56,7 @@
                 </div>
 
                 <div class="footer-subsection">
-                    <h1 class="header-small">Visit us</h1>
+                    <h2 class="header-small">Visit us</h2>
                     <p class="text-small">
                         57 Sunshine Avenue <br>
                         Te Rapa, Hamilton 3200</p>
