Refactor HTML structure across multiple pages for improved accessibility and consistency; add viewport meta tag for responsive design

--- a/index.html
+++ b/index.html
@@ -4,18 +4,16 @@
 -->
 
 <!DOCTYPE html>
-
+<html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snazzy Paws Dog Grooming</title>
     <link rel="stylesheet" href="css/styles.css"> 
 </head>
-
-<html lang="en">
     <body class="background-theme">
         <header> 
-            <nav class="accent-theme" role="navigation" aria-label="Navigation menu">
-
+            <nav class="accent-theme" aria-label="Navigation menu">
                 <div class="sp-nav-header">
                     <a aria-label="Main website header" href=index.html>Snazzy Paws Grooming</a>
                 </div>
@@ -70,7 +68,7 @@
             </div>
         </main>
         
-        <footer class="accent-theme footer-main footer-theme" role="contentinfo" aria-label="Hours and location">
+        <footer class="accent-theme footer-main footer-theme" aria-label="Hours and location">
             <div class="footer-subsection">
                 <h2 class="header-small">Our Hours</h2> 
                 <p class="text-small">
@@ -86,7 +84,5 @@
                     Te Rapa, Hamilton 3200</p>
             </div>
         </footer>
-        
     </body>
-
 </html>
