--- a/services.html
+++ b/services.html
@@ -4,20 +4,19 @@
 -->
 
 <!DOCTYPE html>
-
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Snazzy Paws Dog Grooming</title>
-    <link rel="stylesheet" href="css/styles.css"> 
-</head>
-
 <html lang="en">
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <title>Snazzy Paws Dog Grooming</title>
+        <link rel="stylesheet" href="css/styles.css"> 
+    </head>
+
     <body class="background-theme">
         <header> 
-            <nav class="accent-theme" role="navigation" aria-label="Navigation menu">
-
+            <nav class="accent-theme" aria-label="Navigation menu">
                 <div class="sp-nav-header">
                     <a aria-label="Main website header" href=index.html>Snazzy Paws Grooming</a>
                 </div>
@@ -85,22 +84,22 @@
                     </tbody>
                 </table>
             </div>
-
-            <footer class="accent-theme footer-main footer-theme" role="contentinfo" aria-label="Hours and location">
-                <div class="footer-subsection">
-                    <h2 class="header-small">Our Hours</h2> 
-                    <p class="text-small">
-                        Monday - Saturday <br>
-                        9AM - 5PM
-                    </p>
-                </div>
-
-                <div class="footer-subsection">
-                    <h2 class="header-small">Visit us</h2>
-                    <p class="text-small">
-                        57 Sunshine Avenue <br>
-                        Te Rapa, Hamilton 3200</p>
-                </div>
-            </footer>
-            
         </main>
+        <footer class="accent-theme footer-main footer-theme" aria-label="Hours and location">
+            <div class="footer-subsection">
+                <h2 class="header-small">Our Hours</h2> 
+                <p class="text-small">
+                    Monday - Saturday <br>
+                    9AM - 5PM
+                </p>
+            </div>
+
+            <div class="footer-subsection">
+                <h2 class="header-small">Visit us</h2>
+                <p class="text-small">
+                    57 Sunshine Avenue <br>
+                    Te Rapa, Hamilton 3200</p>
+            </div>
+        </footer>
+    </body>
+</html>
