--- a/contact.html
+++ b/contact.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Snazzy Paws Dog Grooming</title>
-    <link rel="stylesheet" href="css/styles.css"> 
-</head>
-
 <html lang="en">
+    
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <title>Snazzy Paws Dog Grooming</title>
+        <link rel="stylesheet" href="css/styles.css"> 
+    </head>
+
+
     <body class="background-theme">
         <header> 
-            <nav class="accent-theme" role="navigation" aria-label="Navigation menu">
-
+            <nav class="accent-theme" aria-label="Navigation menu">
                 <div class="sp-nav-header">
                     <a aria-label="Main website header" href=index.html>Snazzy Paws Grooming</a>
                 </div>
@@ -51,32 +51,31 @@
 
                 <div class="contact-form">
                     <h2>Contact Form</h2>
-
                     <p>Please fill out our contact form below to contact us!</p>
                     <iframe 
-                    aria-label="Snazzy Paws contact form" 
-                    src="https://docs.google.com/forms/d/e/1FAIpQLScRdpPOBkSdBOvwZ3Mltn_qYiDyDUa_mLQpy28eRwQ5jq3Plg/viewform?embedded=true"
-                    width="640" height="858"
-                    frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                        aria-label="Snazzy Paws contact form" 
+                        src="https://docs.google.com/forms/d/e/1FAIpQLScRdpPOBkSdBOvwZ3Mltn_qYiDyDUa_mLQpy28eRwQ5jq3Plg/viewform?embedded=true"
+                        width="640" height="858">
+                    </iframe>
                 </div>
                 
             </div>
-
-            <footer class="accent-theme footer-main footer-theme" role="contentinfo" aria-label="Hours and location">
-                <div class="footer-subsection">
-                    <h2 class="header-small">Our Hours</h2> 
-                    <p class="text-small">
-                        Monday - Saturday <br>
-                        9AM - 5PM
-                    </p>
-                </div>
-
-                <div class="footer-subsection">
-                    <h2 class="header-small">Visit us</h2>
-                    <p class="text-small">
-                        57 Sunshine Avenue <br>
-                        Te Rapa, Hamilton 3200</p>
-                </div>
-            </footer>
-
         </main>
+        <footer class="accent-theme footer-main footer-theme" aria-label="Hours and location">
+            <div class="footer-subsection">
+                <h2 class="header-small">Our Hours</h2> 
+                <p class="text-small">
+                    Monday - Saturday <br>
+                    9AM - 5PM
+                </p>
+            </div>
+
+            <div class="footer-subsection">
+                <h2 class="header-small">Visit us</h2>
+                <p class="text-small">
+                    57 Sunshine Avenue <br>
+                    Te Rapa, Hamilton 3200</p>
+            </div>
+        </footer>        
+    </body>
+</html>
