Updated services table on the stylesheet to accomodate common tablet screen resolutions

--- a/template.html
+++ b/template.html
@@ -2,7 +2,7 @@
     Severin Romaine - 5117711 
     BIT607 - Assessment 2
     Note:
-        Template used on all pages. 
+        Template used for nav and footer on all pages. 
 -->
 
 <!DOCTYPE html>
