Fixed code using HTML markup validation. Fixed indentations.

--- a/public-html/privacy.html
+++ b/public-html/privacy.html
@@ -62,12 +62,12 @@
                 <div class="privacy-policy w3-panel w3-card w3-white">
                     <p>Effective date: January 9th, 2026</p>
                     <p>We collect personal information from you, including information about your:</p>
-                    <p>&#8226 name</p>
-                    <p>&#8226 contact information</p>
-                    <p>&#8226 billing or purchase information</p>
+                    <p>&#8226; name</p>
+                    <p>&#8226; contact information</p>
+                    <p>&#8226; billing or purchase information</p>
 
                     <p>We collect your personal information in order to:</p>
-                    <p>&#8226 confirm customer identities for appointment booking purposes</p>
+                    <p>&#8226; confirm customer identities for appointment booking purposes</p>
                     
                     <p>Providing some information is optional. If you choose not to enter their first and last name, and a contact number/email address, 
                         we'll be unable to book appointments.</p>
@@ -104,7 +104,6 @@
                 </div>
             </div>
         </footer>
-
             <script>
                 function displayMenu() {
                     var x = document.getElementById("dropdown-menu");
