--- a/public-html/services.html
+++ b/public-html/services.html
@@ -1,3 +1,8 @@
+<!-- 
+    Severin Romaine - 5117711 
+    BIT607 - Assessment 3 
+-->
+<!DOCTYPE html>
 <html lang="en"><head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -48,7 +53,6 @@
         
         <main>
             <h1 id="services-heading" class="w3-bold w3-xxxlarge w3-center">Services</h1>
-
             <section class="w3-row-padding w3-padding-32 w3-animate-bottom">
                 <div class="w3-content w3-col l5 m6 s12 w3-padding-right">
                     <h2 class="w3-xxlarge w3-center">Overview</h2>
@@ -74,67 +78,69 @@
                 <h2 class="w3-xxlarge w3-center">Services we offer</h2>
                 <div class="services-table">
                     <table class="w3-table-all w3-margin">
-                        <tbody><tr>
-                            <th>Service</th>
-                            <th>Price</th>
-                        </tr>
-                        <tr>
-                            <td>Bath and brush: shampoo, blow-dry, brush-out and nail trim.</td>
-                            <td>$25-$50</td>
-                        </tr>
-                        <tr>
-                            <td>Haircut: bath, blow-dry, haircut and nail trim</td>
-                            <td>$45-$85</td>
-                        </tr>
-                        <tr>
-                            <td>Nail trim: trim nails and, in some cases, filing</td>
-                            <td>$10-$20</td>
-                        </tr>
-                        <tr>
-                            <td>Ear cleaning: gentle cleaning of ears to remove wax and debris</td>
-                            <td>$10-$15</td>
-                        </tr>
-                        <tr>
-                            <td>Teeth brushing: brushing with pet-safe toothpaste</td>
-                            <td>$10-$15</td>
-                        </tr>
-                        <tr>
-                            <td>De-shedding treatment: special shampoo and undercoat removal</td>
-                            <td>$20-$40 in addition to bath or haircut</td>
-                        </tr>
-                        <tr>
-                            <td>Flea and tick treatment: shampoo and preventative treatment.</td>
-                            <td>$15-$30</td>
-                        </tr>
-                        <tr>
-                            <td>Spa package: bath, haircut, teeth brushing, nail trim, sometimes special scents/conditioners</td>
-                            <td>$75-$150</td>
-                        </tr>
-                        <tr>
-                            <td>Express service: for dogs that need minimal grooming or a quick touch-up</td>
-                            <td>additional $15-$25</td>
-                        </tr>
-                        <tr>
-                            <td>Medicated bath: for pets with skin conditions requiring special shampoo</td>
-                            <td>additional $20-$40</td>
-                        </tr>
-                        <tr>
-                            <td>Special-breed cuts: breed-specific cuts or styling based on customer preference</td>
-                            <td>Price varies and is often quoted after consultation</td>
-                        </tr>
-                        <tr>
-                            <td>Puppy package: introductory grooming services tailored for puppies</td>
-                            <td>$30-$60</td>
-                        </tr>
-                        <tr>
-                            <td>Senior dog package: grooming services tailored for older dogs, often with special handling and care</td>
-                            <td>$40-$80</td>
-                        </tr>
-                        <tr>
-                            <td>Full grooming package: comprehensive grooming service, including bath, haircut, teeth brushing, nail trim and ear cleaning</td>
-                            <td>$60-$120</td>
-                        </tr>
-                    </tbody></table>
+                        <tbody>
+                            <tr>
+                                <th>Service</th>
+                                <th>Price</th>
+                            </tr>
+                            <tr>
+                                <td>Bath and brush: shampoo, blow-dry, brush-out and nail trim.</td>
+                                <td>$25-$50</td>
+                            </tr>
+                            <tr>
+                                <td>Haircut: bath, blow-dry, haircut and nail trim</td>
+                                <td>$45-$85</td>
+                            </tr>
+                            <tr>
+                                <td>Nail trim: trim nails and, in some cases, filing</td>
+                                <td>$10-$20</td>
+                            </tr>
+                            <tr>
+                                <td>Ear cleaning: gentle cleaning of ears to remove wax and debris</td>
+                                <td>$10-$15</td>
+                            </tr>
+                            <tr>
+                                <td>Teeth brushing: brushing with pet-safe toothpaste</td>
+                                <td>$10-$15</td>
+                            </tr>
+                            <tr>
+                                <td>De-shedding treatment: special shampoo and undercoat removal</td>
+                                <td>$20-$40 in addition to bath or haircut</td>
+                            </tr>
+                            <tr>
+                                <td>Flea and tick treatment: shampoo and preventative treatment.</td>
+                                <td>$15-$30</td>
+                            </tr>
+                            <tr>
+                                <td>Spa package: bath, haircut, teeth brushing, nail trim, sometimes special scents/conditioners</td>
+                                <td>$75-$150</td>
+                            </tr>
+                            <tr>
+                                <td>Express service: for dogs that need minimal grooming or a quick touch-up</td>
+                                <td>additional $15-$25</td>
+                            </tr>
+                            <tr>
+                                <td>Medicated bath: for pets with skin conditions requiring special shampoo</td>
+                                <td>additional $20-$40</td>
+                            </tr>
+                            <tr>
+                                <td>Special-breed cuts: breed-specific cuts or styling based on customer preference</td>
+                                <td>Price varies and is often quoted after consultation</td>
+                            </tr>
+                            <tr>
+                                <td>Puppy package: introductory grooming services tailored for puppies</td>
+                                <td>$30-$60</td>
+                            </tr>
+                            <tr>
+                                <td>Senior dog package: grooming services tailored for older dogs, often with special handling and care</td>
+                                <td>$40-$80</td>
+                            </tr>
+                            <tr>
+                                <td>Full grooming package: comprehensive grooming service, including bath, haircut, teeth brushing, nail trim and ear cleaning</td>
+                                <td>$60-$120</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </main>
@@ -157,7 +163,6 @@
                 </div>
             </div>
         </footer>
-
             <script>
                 function displayMenu() {
                     var x = document.getElementById("dropdown-menu");
@@ -166,7 +171,6 @@
                     else {x.className = x.className.replace(" w3-show", "");
                     }
                 }
-
                 function displayMore() {
                     var x = document.getElementById("show-more");
                     if (x.className.indexOf("w3-show") == -1) {
