Updated titles and added meta description tags

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Redirect | Snazzy Paws Dog Grooming</title>
+    <meta name="description" content="Redirecting to the Snazzy Paws Dog Grooming website homepage.">
     <meta http-equiv="refresh" content="0; url=public-html/index.html">
 </head>
 <body></body>
