--- a/public-html/booking.html
+++ b/public-html/booking.html
@@ -12,11 +12,12 @@
 <html lang="en">
 
     <head>
+        <title>Snazzy Paws Dog Grooming | Booking</title>
+        <meta name="description" content="Book a grooming service with Snazzy Paws Dog Grooming; enter your name, email address, dogs breed and information, and an appointment time.">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Snazzy Paws Dog Grooming</title>
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
-    <link rel="stylesheet" href="css/styles.css">    
+        <link rel="stylesheet" href="css/styles.css">    
     </head>
 
     <body class="w3-light-grey">
