--- a/public-html/contact.html
+++ b/public-html/contact.html
@@ -7,9 +7,10 @@
 <html lang="en">
     
     <head>
+        <title>Snazzy Paws Dog Grooming | Contact Us</title>
+        <meta name="description" content="View Snazzy Paws contact number, email address, and store location. Fill out the form to contact us.">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Snazzy Paws Dog Grooming</title>
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
     <link rel="stylesheet" href="css/styles.css">    
     </head>
