--- a/public-html/gallery.html
+++ b/public-html/gallery.html
@@ -13,11 +13,12 @@
 <html lang="en">
 
     <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Snazzy Paws Dog Grooming</title>
+        <title>Snazzy Paws Dog Grooming | Gallery</title>
+        <meta name="description" content="Browse photos of recently groomed dogs at Snazzy Paws.">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
-    <link rel="stylesheet" href="css/styles.css">    
+        <link rel="stylesheet" href="css/styles.css">    
     </head>
 
     <body class="w3-light-grey">
