--- a/public-html/privacy.html
+++ b/public-html/privacy.html
@@ -9,10 +9,10 @@
 <html lang="en">
 
     <head>
+        <title>Snazzy Paws Dog Grooming | Privacy Policy</title>
+        <meta name="description" content="Read the Snazzy Paws Dog Grooming privacy policy explaining what customer information is collected and how to request a copy of all stored information.">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-        <title>Snazzy Paws Dog Grooming</title>
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
     <link rel="stylesheet" href="css/styles.css">
     </head>
