--- a/public-html/staff/index.html
+++ b/public-html/staff/index.html
@@ -6,9 +6,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <title>Snazzy Paws Dog Grooming | Staff Roster</title>
+        <meta name="description" content="Staff roster page displaying employee work schedules for Snazzy Paws Dog Grooming. Restricted access.">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Snazzy Paws Dog Grooming</title>
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
         <link rel="stylesheet" href="../css/styles.css">
     </head>
