--- a/public-html/booking-services.html
+++ b/public-html/booking-services.html
@@ -9,9 +9,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Snazzy Paws Dog Grooming</title>
+        <title>Snazzy Paws Dog Grooming | Booking Services</title>
+        <meta name="description" content="Book an appointment with Snazzy Paws Dog Grooming; view and select your preferred treatment.">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
         <link rel="stylesheet" href="css/styles.css">     
     </head>
