--- a/public-html/index.html
+++ b/public-html/index.html
@@ -5,14 +5,14 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snazzy Paws Dog Grooming</title>
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
-    <link rel="stylesheet" href="css/styles.css">
-         
-</head>
+    <head>
+        <title>Snazzy Paws Dog Grooming | Home</title>
+        <meta name="description" content="Snazzy Paws Dog Grooming homepage briefing describing our story and providing contact details.">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
+        <link rel="stylesheet" href="css/styles.css">
+    </head>
     <body class="w3-light-grey">
         
         <header> 
