--- a/public-html/request-received.html
+++ b/public-html/request-received.html
@@ -7,12 +7,12 @@
 <html lang="en">
 
     <head>
+        <title>Snazzy Paws Dog Grooming | Booking Confirmation</title>
+        <meta name="description" content="Confirmation page confirming your Snazzy Paws grooming appointment request has been received and will be confirmed by email.">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-        <title>Snazzy Paws Dog Grooming</title>
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
-    <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/styles.css">
     </head>
 
     <body class="w3-light-grey">
