--- a/public-html/services.html
+++ b/public-html/services.html
@@ -4,10 +4,10 @@
 -->
 <!DOCTYPE html>
 <html lang="en"><head>
+        <title>Snazzy Paws Dog Grooming | Our Services</title>
+        <meta name="description" content="View the full range of dog grooming services offered by Snazzy Paws.">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-        <title>Snazzy Paws Dog Grooming</title>
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
         <link rel="stylesheet" href="css/styles.css">     
 
@@ -53,8 +53,8 @@
         
         <main>
             <h1 id="services-heading" class="w3-bold w3-xxxlarge w3-center">Services</h1>
-            <section class="w3-row-padding w3-padding-32 w3-animate-bottom">
-                <div class="w3-content w3-col l5 m6 s12 w3-padding-right">
+            <section class="w3-margin w3-row-padding w3-padding-32 w3-animate-bottom">
+                <div class="services-overview w3-content w3-col l5 m6 s12 w3-padding-right">
                     <h2 class="w3-xxlarge w3-center">Overview</h2>
                     <p class="w3-large">Our friendly team brings years of experience and genuine care to every appointment. 
                         We're dedicated to keeping your pets healthy and well-groomed, with a strong focus on hygiene and gentle handling.
@@ -65,13 +65,14 @@
                         we're committed to creating a positive experience that leaves every pet looking and feeling their best.</p>
                 </div>
 
-                <div class="w3-right w3-content w3-col m6 s12">
-                    <img class="w3-image w3-round-large w3-card-4 w3-hover-opacity w3-right" src="../images/dog_grooming.png" alt="A photograph of a woman brushing a happy golden retriever" height="500">
+                <div class=" w3-right w3-content w3-col m6 s12">
+                    <img class="w3-image w3-round-large w3-card-4 w3-hover-opacity w3-right" src="../images/dog_grooming.png" alt="A photograph of a woman brushing a happy golden retriever">
                 </div>
             </section>
 
             <div class="w3-center w3-margin-top">
-                <a href="booking.html" class="w3-xlarge w3-round-xxlarge w3-btn w3-indigo">Book an appointment!</a>
+                <a href="booking.html" class="w3-hide-small w3-hide-medium w3-xxxlarge w3-round-xxlarge w3-btn w3-indigo">Book an appointment!</a>
+                <a href="booking.html" class=" w3-hide-large w3-xlarge w3-round-xxlarge w3-btn w3-indigo">Book an appointment!</a>
             </div>
 
             <div class="w3-container w3-margin" role="region" aria-labelledby="services-heading">
